# StupidCppMistakesByMe

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  pointingToVectorElement.cpp  returnATuple.cpp
